dev/kube/hostname.svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-hostname
  namespace: dev
spec:
  selector:
    app: node-hostname
  ports:
  - port: 3000
    targetPort: 3000
