dev/kube/hostname.ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-hostname
  namespace: dev
  labels:
    name: node-hostname
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: node-hostname
            port: 
              number: 3000
